# Final_Project

./: .gitignore  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
Atendente/: apps.py
Documentos/: Documentos de requisitos.md
SerraVet/: asgi.py  settings.py  urls.py  wsgi.py
clinica/: admin.py  forms.py  models.py  views.py
clinica/migrations/: 0001_initial.py  0002_remove_notificacao_consulta_afetada_and_more.py  0002_remove_veterinarioinfo_foto_veterinario.py
clinica/templates/clinica/: base.html  cadastrar_veterinario.html  cadastro.html  deletar_veterinario.html  detalhe_veterinario.html  editar_veterinario.html  home.html  listar_veterinarios.html
clinica/templates/clinica/atd/: base_atendente.html  criar_horario.html  editar_horario.html  excluir_horario.html  gerenciar_horarios.html  gerenciar_pagamento.html  home_atendente.html  reservar_horario.html
clinica/templates/clinica/user/: Perfil_user.html  base_user.html  cadastrar_consulta.html  cadastrar_pet.html  consultas_user.html  detalhes_consulta.html  detalhes_pet.html  editar_pet.html  home_user.html  meus_pets.html  perfil_js.html  prontuario_user.html
clinica/templates/clinica/vet/: base_vet.html  cadastrar_prontuario_vet.html  detalhe_consulta_vet.html  home_vet.html  lista_consultas_vet.html
compose/django/: start
docs/: requisitos.md
static/css/: style.css  style_ate.css  style_user.css  style_vet.css
static/js/: script_mascaras.js
