[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SerraVet"
version = "0.1.0"
description = "Projeto para atividade com o toml"
authors = [
    { name = "Yasmim Lorrana", email = "lorranaft123@gmail.com" },
    { name = "Erick Soares", email = "erick250107@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    asgiref==3.8.1
    Django==5.2.2
    pillow==11.3.0
    sqlparse==0.5.3
    tzdata==2025.2
    psycopg2-binary>=2.9
    djangorestframework==3.15.0
    black==24.0.0
]

[project.urls]
Homepage = "https://github.com/ErickSN25/Final_Project"
Repository = "https://github.com/ErickSN25/Final_Project"
"Bug Tracker" = "https://github.com/ErickSN25/Final_Project/issues"

[project.optional-dependencies]
dev = [
    "black==25.11.0",   
    "flake8==7.0.0",     
    "isort==5.13.2",    
    "pytest==8.2.0",     
    "pytest-django==4.8.0"
]
test = [
    "pytest==8.3.5",
    "pytest-django==4.8.0",
    "coverage==7.5.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["SerraVet*"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "SerraVet.settings"
python_files = ["tests.py", "test_*.py"]
